Daniel Gallego - 01/10/15 Se agrego Entered y Exited a los cajones de la bienvenida

--- a/src/interfaz/Bienvenida.form
+++ b/src/interfaz/Bienvenida.form
@@ -195,6 +195,10 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelSoftwareMouseEntered"/>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelSoftwareMouseExited"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -250,6 +254,10 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelRedesMouseEntered"/>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelRedesMouseExited"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -305,6 +313,10 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelSistemaOperativoMouseEntered"/>
+        <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="panelSistemaOperativoMouseExited"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
